--- a/index.html
+++ b/index.html
@@ -4,51 +4,83 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="./main.css"/>
     <link rel="stylesheet" href="./styles.css"/>
+    
     <title>rock paper scissors game</title>
 </head>
 <body>
     
-    <div class="sect-padd">
-        <h1 class="text-center">THE ROCK PAPER AND SCISSOR GAME</h1>
-    </div>
-    <div class="sect-padd">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <h2 class="pb-4 text-center">Computer: <span class="computer-score">0</span> </h2>
-                </div>
-                <div class="col-md-6">
-                    <h2 class="pb-4 text-center">Player: <span class="player-score">0</span> </h2>
-                </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="h1 text-center head-anim sect-padd text-yellow font-bold">THE ROCK PAPER AND SCISSOR GAME</div>
             </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <h2 class="text-center option" id="rock">ROCK</h2>
-                </div>
-                <div class="col-md-4">
-                    <h2 class="text-center option" id="paper">PAPER</h2>
-                </div>
-                <div class="col-md-4">
-                    <h2 class="text-center option" id="scissors">SCISSORS</h2>
-                </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="h2 pb-4 text-center play-anim text-white">Computer: <span class="computer-score">0</span> </div>
             </div>
-            <div class="row">
-                <div class="col-md-12"> 
-                    <h3 class="text-center py-4 text-green" id="result"></h3>
-                    <h2 class="text-center" id="game-over"></h2>
-                </div>
+            <div class="col-md-6">
+                <div class="h2 pb-4 text-center play-anim text-white">Player: <span class="player-score">0</span> </div>
             </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="text-center pt-5">
-                        <div class="btn btn-purple" id="play-again">Play Again</div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="wrap mt-5">
+                    <div class="img-box">
+                        <img src="./assets/rockImage.png" alt="">
                     </div>
+                    <div class="h2 text-center tools" id="rock">ROCK</div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="wrap mt-5">
+                    <div class="img-box">
+                        <img src="./assets/paperImage.jpg" alt="">
+                    </div>
+                    <div class="h2 text-center tools" id="paper">PAPER</div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="wrap mt-5">
+                    <div class="img-box">
+                        <img src="./assets/scissorsImage.jpg" alt="">
+                    </div>
+                    <div class="h2 text-center tools" id="scissors">SCISSORS</div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12"> 
+                <h3 class="h2 text-center py-4 text-yellow" id="result"></h3>
+                <div class="h2 text-center text-white" id="game-over"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="text-center pt-5">
+                    <div class="btn btn-purple h2" id="play-again">Play Again</div>
                 </div>
             </div>
         </div>
     </div>
+
+    <div class="area" >
+        <ul class="circles">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </div >
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="script.js"></script>
